# Helm

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: publish.yml
examples/solana-next-starter/: .gitignore  Anchor.toml  README.md  anchor.workspace.ts  next.config.ts  package.json  polyq.config.ts  tsconfig.json
scripts/: verify-publish-setup.mjs
src/: index.ts
src/cli/: index.ts
src/codegen/: generate.ts  index.ts
src/config/: index.ts  loader.ts  resolve.ts  types.ts
src/nuxt/: index.ts
src/vite/: idl-sync.ts  index.ts  polyfills.ts
src/workspace/: process.ts
tests/: chains.test.ts  chokidar-smoke.test.ts  citty-smoke.test.ts  cli-commands.test.ts  codegen-kit.test.ts  codegen-snapshots.test.ts  codegen-viem.test.ts  codegen-watch.test.ts  codegen.test.ts  config-loader.test.ts  config-migrate.test.ts  config-validation.test.ts  database-stage.test.ts  dist-shape.test.ts  docker-stage.test.ts  evm-validator.test.ts  example-config.test.ts  health-tuning.test.ts  health.test.ts  nuxt-adapter.test.ts  nuxt-kit-surface.test.ts  orchestrator-concurrency.test.ts  orchestrator.test.ts  polyfills.test.ts  process-mock.test.ts  process.test.ts  schema-sync.test.ts  utils.test.ts  webpack.test.ts  workflows.test.ts
tests/__snapshots__/: codegen-snapshots.test.ts.snap
tests/cli/: codegen.test.ts  init.test.ts  meta.test.ts  setup.ts
tests/fixtures/dev-e2e/programs/counter/: Cargo.toml
tests/fixtures/dev-e2e/programs/counter/src/: lib.rs
tests/frameworks/: frameworks.test.ts
(+30 files in other folders)
